--- a/Sample.WebApp.NETCoreMVC.csproj
+++ b/Sample.WebApp.NETCoreMVC.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="5.1.0" />
   </ItemGroup>
 
 </Project>
